--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
 	],
 	"require": {
 		"php": ">=5.5.0",
-		"sirius/validation": "^2.0"
+		"siriusphp/validation": "^2.0"
 	},
     "autoload": {
         "psr-4": {
